# backend/src/main/java/io/kellermann/bigcontainers/controller/CategoryController.java
@@ -8,6 +8,7 @@ import java.util.UUID;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
+import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -71,6 +72,13 @@ public class CategoryController {
     public ResponseEntity<Void> restore(
             @AuthenticationPrincipal BigContainersPrincipal principal, @PathVariable UUID categoryId) {
         categoryService.restore(principal, categoryId);
+        return ResponseEntity.noContent().build();
+    }
+
+    @DeleteMapping("/{categoryId}")
+    public ResponseEntity<Void> delete(
+            @AuthenticationPrincipal BigContainersPrincipal principal, @PathVariable UUID categoryId) {
+        categoryService.delete(principal, categoryId);
         return ResponseEntity.noContent().build();
     }
 }
